# mustafif.com

./: Cargo.toml  Dockerfile  projects.toml
assets/: script.js  style.css
src/: cached.rs  handles.rs  mailer.rs  main.rs  projects.rs
templates/: header.html.tera  index.html.tera  nav.html.tera
